# pypi_simple_project

./: publish.sh  pyproject.toml
yulain_test_project/: __main__.py
