[project]
name = "your_project_name"
version = "0.0.1"
description = "Description"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["sample", "project"]
dependencies = [
    "requests",
    "psutil"
]

[project.scripts]
test = "your_project_name.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"